# AltEdit

./: .gitignore  Makefile.in  README  README.md  RELNOTES  configure  configure.ac
src/: Makefile
src/alt/: alt.pro  alt.qrc  basicedit.cpp  basicedit.h  bcursor.h  bufmgr.h  ctags.cpp  diff.cpp  diff.h  find.cpp  find.h  global.h  grep.cpp  grep.h  greputil.cpp  highlighter.cpp  highlighter.h  jump.cpp  jump.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_bookmark.cpp  mainwindow_clicked.cpp  replace.cpp  replace.h  utils.cpp
src/diff/: basicedit.h  diff.pro  diff.qrc  global.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h
src/man/: alt.txt
src/spell/: Makefile.in  main.c
src/style/: style.sh
